# dstasky

./: LICENSE  README.md  pyproject.toml
dstasky/: __init__.py  __main__.py  git.py  logging.py  main.py  operations.py  tasks.py  utils.py
dstasky/commands/: create.py  init.py  show.py
