[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dstasky"
authors = [{name = "Luís Ferreira", email = "contact@lsferreira.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "PyYAML",
    "pygit2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = ["sphinx"]

[project.urls]
Home = "https://github.com/ljmf00/dstasky"
Source = "https://github.com/ljmf00/dstasky"

[project.scripts]
dstasky = "dstasky.main:main"
